# geome

./: .cruft.json  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yaml.rej  LICENSE  README.md  README.md.rej  demo.ipynb  noxfile.py  pyproject.toml  pyproject.toml.rej  requirements.txt  utils.py
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/workflows/: release.yaml  sync.yaml  test.yaml
data/: graph_datamodule.py  node_datamodule.py
docs/: api.md  conf.py  conf.py.rej  contributing.md  index.md  reference.md  template_usage.md  usage.md
docs/notebooks/: 1_iterables_and_iterators.ipynb  2_transforms_and_preprocessing.ipynb  3_preview_shape.ipynb  4_linear_NCEM_graph.ipynb  5_non_linear_NCEM_graph.ipynb  add_edge_weights_example.ipynb  anndata_iterable_by_category.ipynb  creating_data_objects_from_anndata.ipynb  example.ipynb  linear_NCEM_graph.ipynb  non_linear_NCEM_graph.ipynb  transforms_and_iterables.ipynb
docs/notebooks/utils/: datamodule.py  datasets.py
examples/: callable_development.ipynb  callable_devolopment.ipynb  creating_data_objects_from_anndata.ipynb  custom.ipynb  demo.ipynb  demo_data.ipynb  demodata.ipynb  graph_embedding.ipynb  linear_NCEM.ipynb  linear_NCEM_graph.ipynb  linear_NCEM_node.ipynb  non_linear_NCEM_graph.ipynb  x.py
examples/utils/models/: graph_embedding.py
gpu-spatial-graph-pipeline/: .cookiecutter.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md
gpu-spatial-graph-pipeline/docs/: conf.py  index.md
gpu-spatial-graph-pipeline/tests/: __init__.py
models/: graph_embedding.py  non_linear_ncem.py
models/modules/: linear_model.py
src/geome/: __init__.py  anndata2data.py  datamodule.py  transforms.py  utils.py
src/geome/adata2data/: __init__.py  anndata2data.py  by_category.py  default.py
src/geome/ann2data/: __init__.py  ann2data.py  basic.py  by_category.py  default.py
src/geome/iterables/: __init__.py  adata2iterable.py  to_category_iterable.py  to_category_iterator.py  to_iterable.py
src/geome/transforms/: __init__.py  __to_array.py  add_adj_matrix.py  add_design_matrix.py  add_edge_index.py  add_edge_weight.py  categorize.py  compose.py  subset.py  to_array.py  utils.py
src/gpu-spatial-graph-pipeline/: __init__.py  __main__.py  anndata2data.py  transforms.py
src/gpu_spatial_graph_pipeline/: anndata2data.py  datamodule.py  transforms.py  utils.py
src/gpu_spatial_graph_pipeline/data/: anndata2data.py  datamodule.py  datasets.py  graph_datamodule.py  node_datamodule.py  utils.py
src/gpu_spatial_graph_pipeline/models/: graph_embedding.py  linear_ncem.py  non_linear_ncem.py
src/gpu_spatial_graph_pipeline/utils/: preprocessing.py  weights.py
tests/: test_basic.py  test_main.py
tests/ann2data/: test_ann2data_by_category.py
tests/iterables/: to_category.py
tests/transforms/: test_add_edge_index.py  test_categorize.py  test_subset.py
(+13 files in other folders)
